# ja_plt

./: .env  .gitignore  Cargo.toml  README.md  jz.sql  main.rs
assets/: index.html
forntend/: .env.development  .env.production  README.md  main.js  package-lock.json  package.json  pages.json
forntend/api/: api.js
forntend/components/: AuthComponent.vue
forntend/mock/: index.js  order.js  service.js  user.js
forntend/pages/auth/: auth.vue
forntend/pages/index/: index.vue
forntend/pages/user/: user.vue
logs/: jz.log.2025-12-06  jz.log.2025-12-07  jz.log.2025-12-08
src/: lib.rs  main.rs
src/config/: env_config.rs  log_config.rs  mod.rs
src/database/: connection.rs  mod.rs
src/handler/: mod.rs  orders.rs  services.rs  users.rs
src/models/: auth.rs  coupon.rs  mod.rs  notification.rs  order.rs  payment.rs  review.rs  service.rs  user.rs  worker.rs
src/repositories/: mod.rs  order_repository.rs  service_repository.rs  user_repository.rs
src/services/: mod.rs  order_service.rs  service_service.rs  user_service.rs
src/utils/: jwt.rs
tests/: auth_tests.rs  integration_tests.rs  main.rs  service_tests.rs  user_tests.rs
vue-frontend/: index.html  package.json
vue-frontend/src/: App.vue
vue-frontend/src/components/: AuthComponent.vue
vue-frontend/src/components/auth/: LoginForm.vue  LoginFormComposition.vue  RegisterForm.vue  UserProfile.vue
