[package]
name = "jz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
argon2 = "0.5"
jsonwebtoken = "9.3"
dotenvy = "0.15"
lazy_static = "1.5"
uuid = { version = "1.0", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"

# 指定二进制文件入口
[[bin]]
name = "jz"
path = "main.rs"