[package]
name = "jz"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 指定二进制文件入口
[[bin]]
name = "jz"
path = "main.rs"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
argon2 = "0.5"
jsonwebtoken = "9.3.0"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
once_cell = "1.19"

[dev-dependencies]
tower = "0.5"